--- a/src/containers/Main.css
+++ b/src/containers/Main.css
@@ -1,7 +1,5 @@
 .team-top {
   margin: auto;
-}
-
-.bottom {
-
+  text-align: center;
+  padding: 0 90px;
 }
