--- a/src/containers/NewsFeed.css
+++ b/src/containers/NewsFeed.css
@@ -38,3 +38,8 @@ select {
     width:80%;
   }
 }
+
+.logos-container {
+  text-align: center;
+  padding: 0 130px;
+}
